# maps-core

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .swift-format  .swiftformat  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Package.resolved  Package.swift  build.gradle.kts  clang-format.sh  cppcheck.sh  frame.pam  gradle.properties  main.cpp  readme.md  settings.gradle.kts
android/: .gitignore  CMakeLists.txt  build.gradle  consumer-rules.pro  copy_all_header_files_to_include_folder.sh  gradle.properties  publish_maven_command.txt  readme.md  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/assets/fonts/: FrutigerLTStd-Roman.json
android/src/main/cpp/graphics/: OpenGLContext.cpp  OpenGLContext.h  OpenGlContext.cpp  OpenGlContext.h  OpenGlHelper.cpp  OpenGlHelper.h  OpenGlRenderTarget.cpp  OpenGlRenderTarget.h  opengl_wrapper.h
android/src/main/cpp/graphics/objects/: GraphicsObjectFactoryOpenGl.cpp  GraphicsObjectFactoryOpenGl.h  IcosahedronOpenGl.cpp  IcosahedronOpenGl.h  Line2dOpenGl.cpp  Line2dOpenGl.h  LineGroup2dOpenGl.cpp  LineGroup2dOpenGl.h  Polygon2dOpenGl.cpp  Polygon2dOpenGl.h  Polygon2dTessellatedOpenGl.cpp  Polygon2dTessellatedOpenGl.h  PolygonGroup2dOpenGl.cpp  PolygonGroup2dOpenGl.h  PolygonPatternGroup2dOpenGl.cpp  PolygonPatternGroup2dOpenGl.h  Quad2dInstancedOpenGl.cpp  Quad2dInstancedOpenGl.h  Quad2dOpenGl.cpp  Quad2dOpenGl.h  Quad2dStretchedInstancedOpenGl.cpp  Quad2dStretchedInstancedOpenGl.h  Quad2dTessellatedOpenGl.cpp  Quad2dTessellatedOpenGl.h  Rectangle2dOpenGl.cpp  Rectangle2dOpenGl.h  Text2dInstancedOpenGl.cpp  Text2dInstancedOpenGl.h  Text2dOpenGl.cpp  Text2dOpenGl.h
android/src/main/cpp/graphics/shader/: AlphaInstancedShaderOpenGl.cpp  AlphaInstancedShaderOpenGl.h  AlphaShaderOpenGl.cpp  AlphaShaderOpenGl.h  BaseShaderProgramOpenGl.cpp  BaseShaderProgramOpenGl.h  ColorCircleShaderOpenGl.cpp  ColorCircleShaderOpenGl.h  ColorLineGroup2dShaderOpenGl.cpp  ColorLineGroup2dShaderOpenGl.h  ColorLineShaderOpenGl.cpp  (+31 more)
android/src/main/cpp/scheduling/: AndroidSchedulerCallback.cpp  AndroidSchedulerCallback.h  JNISchedulerCallback.cpp  JNISchedulerCallback.h
android/src/main/cpp/utils/: OpenGlPerformanceLogger.cpp  OpenGlPerformanceLogger.h  OpenGlPerformanceLoggerInterface.cpp
jvm/: CMakeLists.txt  pom.xml  readme.md
jvm/src/main/cpp/jni/: GlTextureHelper.cpp  OSMesa.cpp
jvm/src/main/java/: com
jvm/src/test/resources/: ch.geojson  style_geojson_ch.json  style_geojson_ch_label.json
jvm/src/test/resources/fonts/: Roboto-Regular.json
jvm/src/test/resources/styles/: style_geojson_ch.json
layer-gps/android/: .gitignore  CMakeLists.txt  README.md  build.gradle  consumer-rules.pro  gradle.properties  settings.gradle
layer-gps/android/.cpp_includes/: GpsMode.h  GpsStyleInfo.h  NativeGpsLayerInterface.h  NativeGpsMode.h
layer-gps/android/src/main/: AndroidManifest.xml
shared/test/: CMakeLists.txt  TestActor.cpp  TestExpressions.cpp  TestGeoJsonParser.cpp  TestGeometryHandler.cpp  TestInternedString.cpp  TestOwnedBytes.cpp  TestReleasableAllocator.cpp  TestStyleParser.cpp  TestSymbolAnimationCoordinatorMap.cpp  TestTileSource.cpp  TestValueEvaluate.cpp  TestValueEvaluators.cpp  TestVectorSet.cpp
shared/test/data/geojson/: feature_unsupported-property-object.json  featurecollection.json  featurecollection_all-types.json  featurecollection_lines.json  featurecollection_noprops.json  featurecollection_partially-invalid.json  featurecollection_points.json  multipolygon.json  point.json
shared/test/data/geojson/invalid/: feature_unsupported-mixed-type-array.json  featurecollection_features-not-array.json  geometrycollection_unsupported.json  point_coords-short.json  point_coords-string.json
shared/test/data/style/: geojson.geojson  geojson_style_disabled_layer.json  geojson_style_inline.json  geojson_style_provider.json  multiple_sprites.json  single_sprite.json
shared/test/data/tiles/: reg.pbf  relief.pbf
shared/test/helper/: GeoJsonGenerator.h  TestData.cpp  TestData.h  TestLocalDataProvider.h  TestScheduler.h
standalone/: CMakeLists.txt  main.cpp  readme.md
web/: CMakeLists.txt  CMakePresets.json  emscripten.cmake  generate-module.js  readme.md  server.py
web/demos/: basic.html  fluid.html  globe.html  globe_interactions.html  index.html  interactions.html  polygons.html
web/demos/assets/: basemap-style-notext.json  basemap-style.json  fluid-colored-style.json  fluid-style.json  map_setup.js  martin.json  shootingRanges.json  style.css  style_geojson_ch.json
web/demos/assets/fonts/: Comic Sans MS.json  DINNextLTW05-Medium.json  DINNextLTW05-Regular.json  Figtree-Black.json  Figtree-BlackItalic.json  Figtree-Bold.json  Figtree-BoldItalic.json  Figtree-ExtraBold.json  Figtree-ExtraBoldItalic.json  Figtree-Italic.json  Figtree-Light.json  Figtree-LightItalic.json  Figtree-MediumItalic.json  Figtree-Regular.json  Figtree-SemiBold.json  Figtree-SemiBoldItalic.json  Frutiger LT Std Black Condensed.json  Frutiger LT Std Black Italic.json  Frutiger LT Std Black.json  Frutiger LT Std BlackCn.json  Frutiger LT Std BlackItalic.json  Frutiger LT Std Bold Condensed.json  Frutiger LT Std Bold Italic.json  Frutiger LT Std Bold.json  Frutiger LT Std BoldCn.json  Frutiger LT Std BoldItalic.json  Frutiger LT Std ExtraBlack Condensed.json  Frutiger LT Std ExtraBlackCn.json  Frutiger LT Std Italic.json  Frutiger LT Std Light Condensed.json  Frutiger LT Std Light Italic.json  Frutiger LT Std Light.json  Frutiger LT Std LightCn.json  Frutiger LT Std LightItalic.json  Frutiger LT Std UltraBlack.json  Frutiger Neue Bold.json  Frutiger Neue Condensed Bold.json  Frutiger Neue Condensed Medium.json  Frutiger Neue Condensed Regular.json  Frutiger Neue Italic.json  (+49 more)
web/src/: FontLoader.cpp  FontLoader.h  FontManifestParser.cpp  FontManifestParser.h  GlobalLoader.cpp  GlobalLoader.h  ImageValTextureHolder.cpp  ImageValTextureHolder.h  LoadRequests.h  Loader.cpp  Loader.h  WebLoader.cpp  WebLoader.h  WebMapCallback.cpp  WebMapCallback.h
(+4910 files in other folders)
